@@ -23,12 +23,17 @@ LIBXSLT_VERSION_INFO=`expr $LIBXSLT_MAJOR_VERSION + $LIBXSLT_MINOR_VERSION`:$LIB
 
 LIBXSLT_VERSION_NUMBER=`expr $LIBXSLT_MAJOR_VERSION \* 10000 + $LIBXSLT_MINOR_VERSION \* 100 + $LIBXSLT_MICRO_VERSION`
 
+if test -f CVS/Entries; then
+  LIBXSLT_VERSION_EXTRA=-CVS`grep ChangeLog CVS/Entries | sed -e s\%/ChangeLog/1\.%% -e s\%/.*$%%`
+fi
+
 AC_SUBST(LIBXSLT_MAJOR_VERSION)
 AC_SUBST(LIBXSLT_MINOR_VERSION)
 AC_SUBST(LIBXSLT_MICRO_VERSION)
 AC_SUBST(LIBXSLT_VERSION)
 AC_SUBST(LIBXSLT_VERSION_INFO)
 AC_SUBST(LIBXSLT_VERSION_NUMBER)
+AC_SUBST(LIBXSLT_VERSION_EXTRA)
 
 dnl
 dnl libexslt is an extension library
@@ -39,12 +44,17 @@ LIBEXSLT_VERSION_INFO=`expr $LIBEXSLT_MAJOR_VERSION + $LIBEXSLT_MINOR_VERSION`:$
 
 LIBEXSLT_VERSION_NUMBER=`expr $LIBEXSLT_MAJOR_VERSION \* 10000 + $LIBEXSLT_MINOR_VERSION \* 100 + $LIBEXSLT_MICRO_VERSION`
 
+if test -f CVS/Entries; then
+  LIBEXSLT_VERSION_EXTRA=-CVS`grep ChangeLog CVS/Entries | sed -e s\%/ChangeLog/1\.%% -e s\%/.*$%%`
+fi
+
 AC_SUBST(LIBEXSLT_MAJOR_VERSION)
 AC_SUBST(LIBEXSLT_MINOR_VERSION)
 AC_SUBST(LIBEXSLT_MICRO_VERSION)
 AC_SUBST(LIBEXSLT_VERSION)
 AC_SUBST(LIBEXSLT_VERSION_INFO)
 AC_SUBST(LIBEXSLT_VERSION_NUMBER)
+AC_SUBST(LIBEXSLT_VERSION_EXTRA)
 
 VERSION=${LIBXSLT_VERSION}
 
