@@ -19,7 +19,8 @@
 #include "exsltconfig.h"
 #include "exslt.h"
 
-const char *exsltLibraryVersion = LIBEXSLT_VERSION_STRING;
+const char *exsltLibraryVersion = LIBEXSLT_VERSION_STRING 
+				LIBEXSLT_VERSION_EXTRA;
 const int exsltLibexsltVersion = LIBEXSLT_VERSION;
 const int exsltLibxsltVersion = LIBXSLT_VERSION;
 const int exsltLibxmlVersion = LIBXML_VERSION;
