@@ -35,6 +35,13 @@ extern "C" {
 #define LIBEXSLT_VERSION_STRING "@LIBEXSLT_VERSION_NUMBER@"
 
 /**
+ * LIBEXSLT_VERSION_EXTRA:
+ *
+ * extra version information, used to show a CVS compilation
+ */
+#define	LIBEXSLT_VERSION_EXTRA "@LIBEXSLT_VERSION_EXTRA@"
+
+/**
  * WITH_CRYPTO:
  *
  * Whether crypto support is configured into exslt
