@@ -37,6 +37,13 @@ extern "C" {
 #define LIBXSLT_VERSION_STRING "@LIBXSLT_VERSION_NUMBER@"
 
 /**
+ * LIBXSLT_VERSION_EXTRA:
+ *
+ * extra version information, used to show a CVS compilation
+ */
+#define	LIBXSLT_VERSION_EXTRA "@LIBXSLT_VERSION_EXTRA@"
+
+/**
  * WITH_XSLT_DEBUG:
  *
  * Activate the compilation of the debug reporting. Speed penalty
